# Layer8-Core-PyClient-PydanticV1

./: README.md  pyproject.toml  setup.py
.openapi-generator/: FILES
docs/: Building.md  BuildingCoordinate.md  BuildingOperator.md  DefaultApi.md  PutBuildingOperatorRequest.md  PutBuildingRequest.md  PutRoomRequest.md  Room.md  Tenancy.md  UpdateTenancyRequest.md
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/api/: default_api.py
openapi_client/models/: __init__.py  building.py  building_coordinate.py  building_operator.py  put_building_operator_request.py  put_building_request.py  put_room_request.py  room.py  tenancy.py  update_tenancy_request.py
test/: test_building.py  test_building_coordinate.py  test_building_operator.py  test_default_api.py  test_put_building_operator_request.py  test_put_building_request.py  test_put_room_request.py  test_room.py  test_tenancy.py  test_update_tenancy_request.py
