[tool.poetry]
name = "openapi-client"
version = "1.0.0"
description = "Layer8 Core API"
authors = ["Layer8 Technologies <contact@layer8.io>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Layer8 Core API"]
include = ["openapi_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

urllib3 = "==2.2.1"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
